--- a/.gitignore
+++ b/.gitignore
@@ -48,6 +48,11 @@ po/*~
 
 # RStudio Connect folder
 rsconnect/
+
+# Mac system files
 .DS_Store
+
+# Environment files
 APIs/Web_of_Science_API_Resources_and_Tutorials/.env
 APIs/PubMed_API_Resources_and_Tutorials/.env
+.env
