Update PubMed API notebook and .gitignore
Added .venv to .gitignore for PubMed API resources. Updated PubMed_API.ipynb to use local virtual environment paths, upgraded package installation commands, and cleared output/error cells for cleaner execution. Also updated notebook metadata to reflect the new environment.

--- a/.gitignore
+++ b/.gitignore
@@ -56,3 +56,4 @@ rsconnect/
 APIs/Web_of_Science_API_Resources_and_Tutorials/.env
 APIs/PubMed_API_Resources_and_Tutorials/.env
 .env
+/APIs/PubMed_API_Resources_and_Tutorials/.venv
