--- a/.gitignore
+++ b/.gitignore
@@ -56,3 +56,4 @@ rsconnect/
 .env
 /APIs/PubMed_API_Resources_and_Tutorials/.venv
 /my_review_agent/src/my_review_agent.egg-info
+/my_review_agent/src/my_review_agent/__pycache__
