--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,4 @@ rsconnect/
 /APIs/PubMed_API_Resources_and_Tutorials/.venv
 /my_review_agent/src/my_review_agent.egg-info
 /my_review_agent/src/my_review_agent/__pycache__
+/my_review_agent/src/my_review_agent/__pycache__
